slider added, need to center and button is not centered anymore, need fixing

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ h3{
     margin-right: 100px;
 }
 
+/* side box besides grid */
 .side-box{
     display: flex;
     box-sizing: border-box;
@@ -23,15 +24,47 @@ h3{
     height: 200px;
     justify-content: flex-end;
     margin-right: 20px;
-
 }
 
+/* slider styling */
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider:hover {
+    opacity: 1;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #04AA6D;
+    cursor: pointer;
+  }
+
+  /* button styling */
 .btn{
     margin: 0 auto;
     /* display: block; */
     margin-top: 150px;
     height: 25px;
-    width: 50px;
+    width: 100%;
     border-radius: 7px;
 }
 
